# big_data_bowl_2025

./: .gitignore  README.md  pyproject.toml
data/: README.md
notebooks/: explore_non_tracking.ipynb  explore_tracking.ipynb  play_plotting.ipynb
notebooks/analysis/: analyse_play_level_motion.ipynb  analyse_tracking_events.ipynb  bait_deception_analysis.ipynb  run_pass_deception.ipynb  run_pass_prediction_model.ipynb  test_set_play_type_predictions.csv
notebooks/analysis/abandoned_ideas/: README.md  pass_target_tipping.ipynb  player_in_motion_analysis.ipynb
notebooks/plotting/: images_for_final_notebook.ipynb
notebooks/testing/: explore_non_tracking.ipynb
src/: config.py  pyproject.toml
src/plotting/: plotting.py
src/preprocessing/: __init__.py  non_tracking_data.py  parse_play.py  play_prediction.py  preprocessing.py  tracking_data.py
