[tool.poetry]
name = "Big Data Bowl 2025"
version = "0.1.0"
description = "App for the 2025 Big Data Bowl"
authors = ["ianastalosh <45411578+ianastalosh@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.9.0"
pandas = "^2.2.3"
numpy = "^2.1.2"
scipy = "^1.14.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
itables = "^2.2.3"
seaborn = "^0.13.2"
pyarrow = "^18.0.0"
shapely = "^2.0.6"
scikit-learn = "^1.6.0"
snakeviz = "^2.2.2"
lightgbm = "^4.5.0"
statsmodels = "^0.14.4"
plotly = "^5.24.1"
nbformat = "^5.10.4"
adjusttext = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
