[tool.poetry]
name = "src"
version = "0.1.0"
description = "App for the 2025 Big Data Bowl"
authors = ["ianastalosh <45411578+ianastalosh@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.9.0"
pandas = "^2.2.3"
numpy = "^2.1.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
